# RustyTube

./: .gitignore  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  TRANSLATIONS.md  dprint.json  leptosfmt.toml  rustfmt.toml  rustytube.desktop
.helix/: config.toml  languages.toml
frontend/: Cargo.toml  Trunk.toml  index.html  package.json  tailwind.config.js
frontend/css/: fonts.css  input.css
frontend/locales/: ar-SY.toml  en-US.toml  fr-FR.toml
frontend/src/: main.rs  themes.rs  utils.rs
frontend/src/components/: card_grid.rs  channel_roll.rs  donate_modal.rs  drawer.rs  error.rs  header.rs  locale_dropdown.rs  mod.rs  page.rs  sidebar.rs  toaster.rs  tooltip.rs  video_preview_card.rs
frontend/src/components/collapsibles/: local_playlist.rs  mod.rs  playlist.rs  recommended.rs
frontend/src/components/preview_cards/: channel.rs  local_playlist.rs  mod.rs  placeholder.rs  playlist.rs  popular.rs  recommended.rs  video.rs
frontend/src/contexts/: config.rs  mod.rs  player.rs  toaster.rs  user.rs
frontend/src/icons/: icons.rs  mod.rs  svg.rs
frontend/src/pages/: channel.rs  mod.rs  playlists.rs  popular.rs  search.rs  settings.rs  subscriptions.rs  trending.rs
frontend/src/pages/home/: homepage.rs  mod.rs  popular.rs  subscriptions.rs  trending.rs
frontend/src/pages/video/: comments.rs  mod.rs  page.rs  utils.rs
frontend/src/pages/video/info/: container.rs  mod.rs
frontend/src/pages/video/recommended/: mod.rs  section.rs
frontend/src/pages/video/video_player/: controls.rs  mod.rs
frontend/src/pages/video/video_player/control_btns/: captions.rs  format.rs  fullscreen.rs  mod.rs  pause.rs  progress_bar.rs  theatre.rs  time_info.rs  volume.rs
frontend/src/pages/video/video_player/player/: audio.rs  mod.rs  player.rs  video.rs
frontend/src/resources/: captions.rs  channel.rs  comments.rs  config.rs  instances.rs  mod.rs  playlists.rs  popular.rs  replies.rs  search.rs  sponsorblock.rs  struct.rs  subscriptions.rs  trending.rs  video.rs
shared/config/: Cargo.toml
shared/config/src/: lib.rs
shared/config/src/tests/: mod.rs
shared/config/src/tests/files/: config.toml
shared/error/: Cargo.toml
shared/error/src/: lib.rs
shared/invidious/: Cargo.toml
shared/invidious/src/: comments.rs  dislikes.rs  error.rs  fetch.rs  instance.rs  lib.rs  subs.rs
shared/invidious/src/channel/: channel.rs  comments.rs  feed.rs  mod.rs  playlists.rs  search.rs  videos.rs
shared/invidious/src/common/: mod.rs
shared/invidious/src/formats/: adaptive.rs  audio.rs  dash.rs  format.rs  legacy.rs  mod.rs  video.rs
shared/invidious/src/formats/items/: audio_quality.rs  color_info.rs  container.rs  mod.rs  resolution.rs  video_quality.rs
shared/invidious/src/hidden/: adaptiveformat.rs  caption.rs  channelitems.rs  comment.rs  countrycodes.rs  formatstream.rs  mix.rs  mod.rs  playlistvideo.rs  popularitem.rs  searchitem.rs  statitems.rs  storyboard.rs  videoshort.rs
shared/invidious/src/hidden/comment/: comment.rs  comments.rs  mod.rs
shared/invidious/src/subs/: mod.rs  newpipe.rs  subscriptions.rs  youtube.rs
shared/invidious/src/tests/: mod.rs
shared/invidious/src/tests/files/: audio_format.json  channel.json  comments.json  freetube-subscriptions.db  freetube_playlists.json  legacy_format.json  libretube_playlists.json  playlist.csv  playlist.json  subscriptions.csv  subscriptions.json  video.json  video_format.json
shared/invidious/src/universal/: mixes.rs  mod.rs  playlists.rs  popular.rs  search.rs  stats.rs  suggestions.rs  trending.rs
shared/invidious/src/universal/playlists/: csv_playlist.rs  freetube.rs  libretube.rs  local.rs  mod.rs
shared/invidious/src/video/: annotations.rs  captions.rs  mod.rs  video.rs
shared/locales/: Cargo.toml
shared/locales/src/: lib.rs
shared/sponsorblock/: Cargo.toml
shared/sponsorblock/src/: lib.rs
shared/sponsorblock/test_files/: -duJtlw394U.json  1EIlcYCfEIE.json  69dCWRvIzyo.json  8BxVi6YiicQ.json  AfzwEF5yr3k.json  Al93JD5GExY.json  Bu6PxzNR3dY.json  CcHevgjAnV0.json  DNfj2BxGIxA.json  FwdDAZruMKk.json  HEbaKDkzomI.json  QsM6b5yix0U.json  RE0f4ed5N24.json  SKIXCPn2xB0.json  TNZk-xnxIYE.json  WXV-zB3EfNw.json  X5OIucMnw7M.json  YjkEVrJP7jI.json  bc8Okr4cgL4.json  fpayOqZNWUo.json  gIMOtNzjHL4.json  i9TJWsuzBLU.json  iQr1EZ3rLOM.json  kaf3pdJ_Cow.json  n3XTZde8ZvQ.json  r22tyT77vOw.json  s1fxZ-VWs2U.json  sB1XQYDbzOE.json  seoaDLWuHtU.json  yLy3ygqA5yg.json
shared/utils/: Cargo.toml
shared/utils/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
