[package]
name = "frontend"
version = "0.1.1"
edition = "2021"

[dependencies]
config = { workspace = true }
console_error_panic_hook = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
gloo = { workspace = true }
invidious = { workspace = true }
isocountry = { workspace = true }
locales = { workspace = true }
leptos = { workspace = true }
leptos_router = { workspace = true }
num-format = { workspace = true }
reqwasm = { workspace = true }
ron = { workspace = true }
rust-i18n = { workspace = true }
rustytube-error = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-xml-rs = { workspace = true }
sponsorblock-rs = { workspace = true }
tauri-sys = { workspace = true }
toml = { workspace = true }
urlencoding = { workspace = true }
utils = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
