[package]
name = "frontend"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
clone-macro = { workspace = true }
config = { workspace = true }
console_error_panic_hook = { workspace = true }
csv = { workspace = true }
gloo = { workspace = true }
invidious = { workspace = true }
isocountry = { workspace = true }
leptos = { workspace = true }
leptos_router = { workspace = true }
locales = { workspace = true }
num-format = { workspace = true }
phosphor-leptos = { workspace = true }
reqwasm = { workspace = true }
ron = { workspace = true }
rust-i18n = { workspace = true }
rustytube-error = { workspace = true }
serde = { workspace = true }
serde-xml-rs = { workspace = true }
serde_json = { workspace = true }
sponsorblock-rs = { workspace = true }
tauri-sys = { workspace = true }
toml = { workspace = true }
urlencoding = { workspace = true }
utils = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
