[package]
name = "config"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
rustytube-error  = { workspace = true }
utils = { workspace = true }
serde_json = { workspace = true }
gloo = { workspace = true }
invidious = { workspace = true }