[package]
name = "config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
gloo = { workspace = true }
invidious = { workspace = true }
isocountry = { workspace = true }
locales = { workspace = true }
num-format = { workspace = true }
rust-i18n = { workspace = true }
rustytube-error = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
utils = { workspace = true }
