[package]
name = "rustytube-error"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
ron = { workspace = true }
tauri-sys = { workspace = true }
gloo = { workspace = true }
reqwasm = { workspace = true }
toml = { workspace = true }
js-sys = { workspace = true }
chrono = { workspace = true }
serde-xml-rs = { workspace = true }

[dependencies.web-sys]
workspace = true

[dependencies.wasm-bindgen]
workspace = true

[dependencies.leptos]
workspace = true
features = ["csr", "nightly"]