[package]
name = "rustytube-error"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
csv = { workspace = true }
gloo = { workspace = true }
js-sys = { workspace = true }
reqwasm = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
serde-xml-rs = { workspace = true }
serde_json = { workspace = true }
tauri-sys = { workspace = true }
toml = { workspace = true }

[dependencies.web-sys]
workspace = true

[dependencies.wasm-bindgen]
workspace = true

[dependencies.leptos]
workspace = true
features = ["csr", "nightly"]
