[package]
name = "utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
csv = { workspace = true }
gloo = { workspace = true }
humantime = { workspace = true }
reqwasm = { workspace = true }
ron = { workspace = true }
rustytube-error = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri-sys = { workspace = true }

[dependencies.wasm-bindgen]
workspace = true

[dependencies.web-sys]
workspace = true
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Performance',
]
